-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.15.1
-
None
-
cd8da8fe5f608d4968b90f19f30b515058605b8c (qt-creator/tqtc-qt-creator/6.0)
Qt Creator's CMake configuration doesn't respect the minimum sdk level used for each Qt version when setting ANDROID_NATIVE_API_LEVEL cmake parameter which can lead to the project not respecting the minimum sdk. This can work in most cases, however, with Qt Multimedia in Qt 6.2, we're using the NDK Media api which is not available for API 16 (which is currently the default min sdk in Creator), and that will lead to linker error
/Users/assam/Library/Android/sdk/ndk/21.3.6528147/toolchains/llvm/prebuilt/darwin-x86_64/lib/gcc/arm-linux-androideabi/4.9.x/../../../../arm-linux-androideabi/bin/ld: error: cannot find -lmediandk
clang++: error: linker command failed with exit code 1 (use -v to see invocation)
ninja: build stopped: subcommand failed.
20:10:03: The process "/usr/local/Cellar/cmake/3.19.1/bin/cmake" exited with code 1.
| For Gerrit Dashboard: QTCREATORBUG-26127 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 365119,4 | Android: Get the minimum sdk level based on the used Qt version | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |